# OrdersApp

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/api/: dependencies.py
src/api/endpoints/: __init__.py  auth.py  orders.py
src/common/: fn.py  initializer.py  times.py  types_.py
src/common/enums/: action.py  error.py  jwt.py  order.py
src/core/: celery_app.py  security.py  web.py
src/core/config/: api.py  app.py  compilation.py  message_broker.py  redis.py
src/core/constants/: api.py  app.py  celery.py  message_broker.py  redis.py
src/core/tasks/: __init__.py  order.py
src/db/: session.py
src/db/extensions/: datetime_utc.py
src/db/migrations/: env.py
src/db/migrations/versions/: 20250320010506_6b0923af6de2_initial.py
src/db/models/: __init__.py  base.py  order.py  user.py
src/infrastructure/message_broker/: connection.py  consumer.py  message_fabric.py
src/infrastructure/redis/: order.py
src/repository/abstract/: order.py  user.py
src/repository/alchemy/: order.py  user.py
src/schemas/: message.py  order.py  token.py  user.py
src/schemas/mappers/: order.py
src/services/: order.py  order_processing.py  user.py
